--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <title>WebGL Demo</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <link rel="stylesheet" href="../webgl.css" type="text/css">
-    <script src="../sylvester.js" type="text/javascript"></script>
-    <script src="../glUtils.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="tutorial/webgl.css" type="text/css">
+    <script src="tutorial/sylvester.js" type="text/javascript"></script>
+    <script src="tutorial/glUtils.js" type="text/javascript"></script>
     <script src="webgl-demo.js" type="text/javascript"></script>
 
     <!-- Fragment shader program -->
