--- a/index.html
+++ b/index.html
@@ -1,45 +1,18 @@
 <!doctype html>
 <html>
   <head>
-    <title>WebGL Demo</title>
+    <title>Project1 Aliaksandr Artsiomenka</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <link rel="stylesheet" href="tutorial/webgl.css" type="text/css">
-    <script src="tutorial/sylvester.js" type="text/javascript"></script>
-    <script src="tutorial/glUtils.js" type="text/javascript"></script>
-    <script src="webgl-demo.js" type="text/javascript"></script>
-
-    <!-- Fragment shader program -->
-
-    <script id="shader-fs" type="x-shader/x-fragment">
-      varying highp vec2 vTextureCoord;
-
-      uniform sampler2D uSampler;
-
-      void main(void) {
-        gl_FragColor = texture2D(uSampler, vec2(vTextureCoord.s, vTextureCoord.t));
-      }
-    </script>
-
-    <!-- Vertex shader program -->
-
-    <script id="shader-vs" type="x-shader/x-vertex">
-      attribute vec3 aVertexPosition;
-      attribute vec2 aTextureCoord;
-
-      uniform mat4 uMVMatrix;
-      uniform mat4 uPMatrix;
-
-      varying highp vec2 vTextureCoord;
-
-      void main(void) {
-        gl_Position = uPMatrix * uMVMatrix * vec4(aVertexPosition, 1.0);
-        vTextureCoord = aTextureCoord;
-      }
-    </script>
+    <script src="http://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
+    <script src="http://rodger.global-linguist.com/webgl/lib/cuon-matrix.js" type="text/javascript"></script>
+    <script src="http://rodger.global-linguist.com/webgl/lib/cuon-utils.js" type="text/javascript"></script>
+    <script src="http://rodger.global-linguist.com/webgl/lib/webgl-utils.js" type="text/javascript"></script>
+    <script src="http://rodger.global-linguist.com/webgl/lib/webgl-debug.js" type="text/javascript"></script>
+    <script src="project1.js" type="text/javascript"></script>
   </head>
 
-  <body onload="start()">
-    <canvas id="glcanvas" width="640" height="480">
+  <body onload="main()">
+    <canvas id="webgl" width="1800" height="900">
       Your browser doesn't appear to support the <code>&lt;canvas&gt;</code> element.
     </canvas>
   </body>
